--- a/src/styles/hero.css
+++ b/src/styles/hero.css
@@ -26,9 +26,22 @@
 .hero h5 {
   max-width: 800px;
   text-align: center;
-  margin: 0 auto var(--page-margin);
   font-size: 26px;
+  margin: 0 auto 1em;
 }
+
+.hero-buttons {
+  text-align: center;
+  margin: 0 auto 5em;
+}
+
+.hero-buttons a {
+  display: inline-block;
+  margin: 0 10px;
+  font-size: 1.3em;
+  padding: 0.8em 2.5em;
+}
+
 
 .trustbar {
   text-align: center;
@@ -36,6 +49,10 @@
   margin: 20px auto 50px auto;
 }
 
+.trustbar h5 {
+  text-align: center;
+  margin: 0 auto var(--page-margin);
+}
 .trustbar .logos img {
   height: 30px;
   padding: 10px;
