--- a/src/styles/DynamicInputGroup.module.scss
+++ b/src/styles/DynamicInputGroup.module.scss
@@ -1,10 +1,10 @@
-.DynamicInputGroup {
+.DynamicInputGroup__DynamicInputGroup {
   p {
     font-size: 13px;
   }
 }
 
-.AddLineButton {
+.DynamicInputGroup__AddLineButton {
   cursor: pointer;
   background: none;
   border: none;
