--- a/src/styles/Card.module.scss
+++ b/src/styles/Card.module.scss
@@ -1,6 +1,6 @@
-@import "../styles/mixins.scss";
+@import "./mixins.scss";
 
-.Card {
+.Card__Card {
   border-radius: 10px;
   background-color: var(--header-background-purple);
   padding: 20px;
@@ -8,7 +8,7 @@
   margin-bottom: 20px;
 }
 
-.TitleContainer {
+.Card__TitleContainer {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
@@ -16,13 +16,13 @@
   margin-bottom: 10px;
 }
 
-.Title {
+.Card__Title {
   font-size: 24px;
   color: white;
   margin-top: 0;
 }
 
-.ButtonsWrapper {
+.Card__ButtonsWrapper {
   display: flex;
   align-items: center;
 }
