--- a/src/styles/Dropdown.module.scss
+++ b/src/styles/Dropdown.module.scss
@@ -1,10 +1,10 @@
-@import "../styles/mixins.scss";
+@import "./mixins.scss";
 
-.Wrapper {
+.Dropdown__Wrapper {
   position: relative;
 }
 
-.DropdownListContainer {
+.Dropdown__DropdownListContainer {
   visibility: hidden;
   position: absolute;
   top: 100%;
@@ -20,7 +20,7 @@
   flex-direction: column;
   align-items: flex-start;
 
-  &.Open {
+  &.Dropdown__Open {
     visibility: visible;
     opacity: 1;
     z-index: 1;
@@ -28,7 +28,7 @@
   }
 }
 
-.DropdownList {
+.Dropdown__DropdownList {
   background: var(--dark-purple);
   border-radius: 6px;
   padding: 10px;
@@ -37,7 +37,7 @@
   flex-direction: column;
 }
 
-.Button {
+.Dropdown__Button {
   @include button;
   color: #fff;
   background: var(--dark-purple);
@@ -55,7 +55,7 @@
   }
 }
 
-.DropdownIcon {
+.Dropdown__DropdownIcon {
   stroke: currentColor;
   fill: currentColor;
   display: inline-flex;
@@ -65,7 +65,7 @@
     box-shadow: none;
   }
 
-  &.Open {
+  &.Dropdown__Open {
     transform: rotate(-180deg);
     transition: transform 150ms ease;
   }
