--- a/src/styles/Form.module.scss
+++ b/src/styles/Form.module.scss
@@ -1,4 +1,4 @@
-.Form {
+.Form__Form {
   color-scheme: dark;
   background-color: var(--secondary-background-purple);
   color: #ccc;
@@ -13,31 +13,31 @@
     "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
-.FormSmall {
+.Form__FormSmall {
   max-width: 700px;
 }
 
-.Heading1 {
+.Form__Heading1 {
   font-size: 36px;
   text-align: center;
 }
 
-.Heading2 {
+.Form__Heading2 {
   font-size: 24px;
   text-align: center;
 }
 
-.Heading3 {
+.Form__Heading3 {
   font-size: 20px;
 }
 
-.Heading4 {
+.Form__Heading4 {
   font-size: 16px;
   text-transform: uppercase;
   margin-bottom: 5px;
 }
 
-.FormHeader {
+.Form__FormHeader {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -46,7 +46,7 @@
   position: relative;
 }
 
-.FormIconButton {
+.Form__FormIconButton {
   position: absolute;
   top: 0;
   right: 0;
@@ -56,7 +56,7 @@
   border: none;
 }
 
-.FormIcons {
+.Form__FormIcons {
   height: 20px;
   width: 20px;
   cursor: pointer;
@@ -70,7 +70,7 @@
   right: 0;
 }
 
-.Button {
+.Form__Button {
   font-family: inherit;
   margin: 10px;
   display: flex;
@@ -85,25 +85,25 @@
   }
 }
 
-.ButtonsWrapper {
+.Form__ButtonsWrapper {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
 }
 
-.Icon {
+.Form__Icon {
   margin-right: 10px;
   height: 20px;
 }
 
-.DividingLine {
+.Form__DividingLine {
   // @todo: use variables or mixins for interdependent margin/padding
   margin: 20px -40px;
   height: 0;
   border-top: 2px solid var(--border-lightest-background);
 }
 
-.EmphasizedInputGroup {
+.Form__EmphasizedInputGroup {
   // @todo: use variables or mixins for interdependent margin/padding
   margin: 20px -40px;
   padding: 30px 45px;
@@ -113,48 +113,48 @@
   background: var(--header-background-purple);
 }
 
-.EmphasizedInputGroup p {
+.Form__EmphasizedInputGroup p {
   font-size: 13px;
 }
 
-.List {
+.Form__List {
   padding: 0 0 0 10px;
   list-style: none;
 }
 
 @media (max-width: 600px) {
-  .Form {
+  .Form__Form {
     // @todo: use variables or mixins for interdependent margin/padding
     padding: 15px;
     margin: 15px auto;
     font-size: 13px;
   }
 
-  .Heading1 {
+  .Form__Heading1 {
     font-size: 32px;
   }
 
-  .Heading2 {
+  .Form__Heading2 {
     font-size: 20px;
   }
 
-  .Heading3 {
+  .Form__Heading3 {
     font-size: 16px;
   }
 
-  .Heading4 {
+  .Form__Heading4 {
     font-size: 14px;
     text-transform: uppercase;
     margin-bottom: 5px;
   }
 
-  .EmphasizedInputGroup {
+  .Form__EmphasizedInputGroup {
     // @todo: use variables or mixins for interdependent margin/padding
     margin: 0 -15px 15px -15px;
     padding: 15px;
   }
 
-  .DividingLine {
+  .Form__DividingLine {
     // @todo: use variables or mixins for interdependent margin/padding
     margin: 0 -15px 15px -15px;
   }
