--- a/src/styles/Login.module.scss
+++ b/src/styles/Login.module.scss
@@ -1,11 +1,11 @@
-.LoginButtonWrapper {
+.Login__LoginButtonWrapper {
   display: inline-block;
   padding-left: 10px;
   border-left: 3px solid var(--main-purple);
   margin-left: 10px;
 }
 
-.LoginButton {
+.Login__LoginButton {
   display: flex;
   align-items: center;
   text-align: right;
@@ -25,7 +25,7 @@
   }
 }
 
-.NoDropdown {
+.Login__NoDropdown {
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -38,24 +38,24 @@
   }
 }
 
-.SmallerButton {
+.Login__SmallerButton {
   display: flex;
   align-items: center;
 }
 
-.ButtonMargin {
+.Login__ButtonMargin {
   @media (max-width: 970px) {
     margin-bottom: 10px;
   }
 }
 
-.Desktop {
+.Login__Desktop {
   @media (max-width: 970px) {
     display: none;
   }
 }
 
-.Mobile {
+.Login__Mobile {
   border-top: 2px solid var(--main-purple);
   width: 100%;
   @media (min-width: 970px) {
@@ -63,17 +63,17 @@
   }
 }
 
-.Icon {
+.Login__Icon {
   margin-right: 10px;
   height: 20px;
 }
 
-.Link {
+.Login__Link {
   display: flex !important;
   align-items: center;
 }
 
-.DividingLine {
+.Login__DividingLine {
   margin: 40px;
   min-width: 70%;
   max-width: 100%;
