--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,23 +1,108 @@
+// Typography
+// ------------------------------------------------
+
 $font-family: "Satoshi Variable", sans-serif;
+$font-family-code: "PT Mono", monospace;
+
+// Colors
+// ------------------------------------------------
 
 // Brand colors
-$color--c4-button-blurple: rgba(113,74,235,1);
-$color--sponsor-color: rgba(64,203,161,1);
+$color--c4-button-blurple: rgba(113, 74, 235, 1);
+$color--sponsor-color: rgba(64, 203, 161, 1);
 
 // Black and white
-$color--white: rgba(255,255,255,1);
-$color--black: rgba(2,2,3,1);
+$color--white: rgba(255, 255, 255, 1);
+$color--black: rgba(2, 2, 3, 1);
 
 // Neutral palette
-$color--n-100: rgba(11,10,13,1);
-$color--n-90: rgba(29,27,38,1);
-$color--n-80: rgba(46,43,59,1);
-$color--n-70: rgba(49,46,64,1);
-$color--n-60: rgba(64,61,77,1);
-$color--n-50: rgba(75,71,89,1);
-$color--n-40: rgba(86,82,102,1);
-$color--n-30: rgba(107,102,128,1);
-$color--n-20: rgba(141,138,153,1);
-$color--n-10: rgba(173,171,178,1);
-$color--n-5: rgba(196,194,204,1);
-$color--n-2: rgba(230,230,230,1);
+$color--n-100: rgba(11, 10, 13, 1);
+$color--n-90: rgba(29, 27, 38, 1);
+$color--n-80: rgba(46, 43, 59, 1);
+$color--n-70: rgba(49, 46, 64, 1);
+$color--n-60: rgba(64, 61, 77, 1);
+$color--n-50: rgba(75, 71, 89, 1);
+$color--n-40: rgba(86, 82, 102, 1);
+$color--n-30: rgba(107, 102, 128, 1);
+$color--n-20: rgba(141, 138, 153, 1);
+$color--n-10: rgba(173, 171, 178, 1);
+$color--n-5: rgba(196, 194, 204, 1);
+$color--n-2: rgba(230, 230, 230, 1);
+
+// Spacing
+// ------------------------------------------------
+
+$spacing--base: 0.5rem; // 8px
+
+$spacing--xxs: calc(#{$spacing--base}/ 4); // 2px
+$spacing--xs: calc(#{$spacing--base}/ 2); // 4px
+$spacing--s: $spacing--base; // 8px
+$spacing--m: calc(#{$spacing--base} * 2); // 16px
+$spacing--l: calc(#{$spacing--base} * 3); // 24px
+$spacing--xl: calc(#{$spacing--base} * 4); // 32px
+$spacing--xxl: calc(#{$spacing--base} * 5); // 40px
+$spacing--xxxl: calc(#{$spacing--base} * 6); // 48px
+
+// Breakpoints
+// ------------------------------------------------
+
+$breakpoint--xs: 0;
+$breakpoint--s: 600px;
+$breakpoint--m: 960px;
+$breakpoint--l: 1280px;
+$breakpoint--xl: 1920px;
+
+// Layout
+// ------------------------------------------------
+
+$layout--max-width: 1280px;
+
+// Shadows
+// ------------------------------------------------
+
+$shadow--base: 0 0 0.5rem 0 rgba(0, 0, 0, 0.5);
+$shadow--hover: 0 0 0.5rem 0 rgba(0, 0, 0, 0.75);
+
+// Transitions
+// ------------------------------------------------
+
+$transition--base: 0.2s ease-in-out;
+
+// Border radius
+// ------------------------------------------------
+
+$border-radius--base: 0.2rem; // 4px
+$border-radius--xs: calc(#{$border-radius--base}/ 2); // 2px
+
+// Z-index
+// ------------------------------------------------
+
+$z-index--base: 1;
+$z-index--modal: 1000;
+
+// Media queries
+// ------------------------------------------------
+
+@mixin breakpoint($breakpoint) {
+  @if $breakpoint == "xs" {
+    @media (min-width: $breakpoint--xs) {
+      @content;
+    }
+  } @else if $breakpoint == "s" {
+    @media (min-width: $breakpoint--s) {
+      @content;
+    }
+  } @else if $breakpoint == "m" {
+    @media (min-width: $breakpoint--m) {
+      @content;
+    }
+  } @else if $breakpoint == "l" {
+    @media (min-width: $breakpoint--l) {
+      @content;
+    }
+  } @else if $breakpoint == "xl" {
+    @media (min-width: $breakpoint--xl) {
+      @content;
+    }
+  }
+}
