--- a/src/styles/base-layout.scss
+++ b/src/styles/base-layout.scss
@@ -1,5 +1,30 @@
-@import 'variables';
+@import "variables";
 
+// CSS rule order
+// --------------------
+
+// 1. Variables
+// 2. Box model properties
+// 3. Display and position
+// 4. Background
+// 5. Border
+// 6. Box shadow
+// 7. Text
+// 8. Transforms
+// 9. Other
+
+// [Tip] For typography applied to `body`, check `base-typography`.
 body {
-    background: black;
+  background: black;
+  color: white !important;
+
+  padding: 0 $spacing--m $spacing--m;
+  @include breakpoint("m") {
+    padding: 0 $spacing--l $spacing--l;
+  }
+}
+
+main {
+  max-width: $layout--max-width;
+  margin: $spacing--l auto;
 }
